# unibz-76088A-materials

./: .clang-format  .gitignore  Dockerfile  FAQ.md  README.md  gigit.py
.github/workflows/: release.yaml
1-hello_world/: CMakeLists.txt
2-basics/1-hello_world/: 1-hello_world.c  README.md
2-basics/2-modularity/: README.md
2-basics/2-modularity/1-base/: README.md
2-basics/2-modularity/1-base/0/: main.c  temperature_sensor.c
2-basics/2-modularity/1-base/1/: main.c  spi_bus.c
2-basics/2-modularity/1-base/2/: main.c  spi_bus.c  temperature_sensor.c
2-basics/2-modularity/1-base/3/: main.c  spi_bus.c  temperature_sensor.c
2-basics/2-modularity/2-header-file/: README.md
2-basics/2-modularity/2-header-file/1/: temperature_sensor.c  temperature_sensor.h
2-basics/2-modularity/2-header-file/2/: main.c
2-basics/2-modularity/2-header-file/4/: configuration.c
2-basics/2-modularity/2-header-file/5/: configuration.h
2-basics/2-modularity/2-header-file/6/configuration/: fake_user_input.c
2-basics/2-modularity/2-header_file/: README.md
2-basics/2-modularity/2-header_file/0/: main.c
2-basics/2-modularity/2-header_file/1/: main.c  spi_bus.c
2-basics/2-modularity/2-header_file/2/: spi_bus.h  temperature_sensor.h
2-basics/2-modularity/2-header_file/3/: configuration.c
2-basics/2-modularity/2-header_file/5/: configuration_fake_file.c  main.c
2-basics/2-modularity/2-header_file/6/configuration/: fake_default.c
2-basics/2-modularity/2-header_file/6/spi_bus/: spi_bus.h
2-basics/2-modularity/2-header_file/6/temperature_sensor/: temperature_sensor.c  temperature_sensor.h
2-basics/2-modularity/3-cmake/: README.md
2-basics/2-modularity/3-cmake/0/configuration/: common.c
2-basics/2-modularity/3-cmake/1/: CMakeLists.txt
2-basics/2-modularity/3-cmake/2/: CMakeLists.txt
2-basics/2-modularity/3-cmake/2/configuration/: CMakeLists.txt
2-basics/2-modularity/3-cmake/2/spi_bus/: CMakeLists.txt
2-basics/2-modularity/3-cmake/2/temperature_sensor/: CMakeLists.txt
2-basics/3-function_pointer/: README.md  main.c
3-blink/: README.md
3-blink/1-better_project_setup/: README.md
3-blink/1-better_project_setup/1/: CMakeLists.txt
3-blink/1-better_project_setup/1/main/: CMakeLists.txt  blink_example_main.c
3-blink/1-better_project_setup/2/: CMakeLists.txt
3-blink/2-freertos/: README.md
3-blink/2-freertos/0/main/: blink_example_main.c
3-blink/2-freertos/1/main/: blink_example_main.c
3-blink/2-freertos/2.1-detour/main/: blink_example_main.c
3-blink/2-freertos/2/main/: blink_example_main.c
3-blink/2-freertos/3/main/: CMakeLists.txt  blink_example_main.c
3-blink/2-interrupt/: README.md
3-blink/2-interrupt/1/main/: blink_example_main.c
3-blink/2-interrupt/2/: CMakeLists.txt
3-blink/2-interrupt/2/main/: blink_example_main.c
3-project_template/: CMakeLists.txt
3-project_template/src/components/led/: CMakeLists.txt  led.c  led.h
3-project_template/src/components/temperature_sensor/: CMakeLists.txt  temperature_sensor.c  temperature_sensor.h
3-project_template/src/main/: CMakeLists.txt  main.c
4-project/spi_slave/: README.md
4-project/spi_slave/1/sender/main/: app_main.c
4-project/spi_slave/2/: README.md
4-project/spi_slave/2/receiver/main/: app_main.c
4-project/spi_slave/2/sender/main/: app_main.c
4-project/spi_slave/3/receiver/main/: app_main.c
4-project/spi_slave/3/sender/main/: app_main.c
slides/: CMakeLists.txt  README.md
slides/2022-03-03-introduction_to_embedded_programming/: main.md
slides/2022-03-16-practical_programming_in_c/: main.md
slides/2022-03-30-programming_paradigms/: main.md
slides/common/: epilogue.md  header.tex  ieee.csl  metadata.yaml  references.bib
